Remove GlobalDefaults object.
On the way, this involved:

  * Added `lib/level-of-detail.ts`
  * Refactored `lib/manifoldCAD.ts` and `types/manifoldCAD.d.ts` to use re-exports.
  * Improved documentation.
    * Extracted GLTFNode into a module.
    * Added @internal to hide functions that aren't really public facing.
  * Updated examples to match.

--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -7,7 +7,8 @@
     "manifold-cad": "./bin/manifold-cad"
   },
   "scripts": {
-    "build": "tsc && node ./esbuild.mjs && api-extractor run",
+    "build": "tsc && node ./esbuild.mjs && npm run build:api-extractor",
+    "build:api-extractor": "api-extractor run -c api-extractor-manifoldCAD.json && api-extractor run -c api-extractor-manifoldCADGlobals.json",
     "clean": "tsc --build --clean",
     "format": "cd ../.. && ./scripts/format.sh",
     "docs": "npx typedoc",
@@ -60,6 +61,7 @@
     "types/manifoldCAD.d.ts",
     "types/globalDefaults.d.ts",
     "dist/manifoldCAD.d.ts",
+    "dist/manifoldCADGlobals.d.ts",
     "dist/worker.bundled.js"
   ],
   "exports": {
