--- a/.github/workflows/publish_npm.yml
+++ b/.github/workflows/publish_npm.yml
@@ -31,6 +31,7 @@ jobs:
     - name: Publish to npm
       run: |
         cd ./bindings/wasm/
+        npm install
         npm publish
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
