Pack all the things.

--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -25,41 +25,10 @@
     "manifold-encapsulated-types.d.ts",
     "manifold-global-types.d.ts",
     "bin/manifold-cad",
-    "lib/animation.d.ts",
-    "lib/animation.js",
-    "lib/bundler.js",
-    "lib/bundler.d.ts",
-    "lib/debug.d.ts",
-    "lib/debug.js",
-    "lib/math.js",
-    "lib/math.d.ts",
-    "lib/error.d.ts",
-    "lib/error.js",
-    "lib/scene-builder.d.ts",
-    "lib/scene-builder.js",
-    "lib/gltf-io.d.ts",
-    "lib/gltf-io.js",
-    "lib/3mf-export.d.ts",
-    "lib/export-3mf.d.ts",
-    "lib/export-3mf.js",
-    "lib/export-gltf.d.ts",
-    "lib/export-gltf.js",
-    "lib/garbage-collector.js",
-    "lib/garbage-collector.d.ts",
-    "lib/manifold-gltf.d.ts",
-    "lib/manifold-gltf.js",
-    "lib/material.d.ts",
-    "lib/material.js",
-    "lib/util.js",
-    "lib/util.d.ts",
-    "lib/wasm.js",
-    "lib/wasm.d.ts",
-    "lib/worker.js",
-    "lib/worker.d.ts",
-    "lib/manifoldCAD.js",
-    "lib/manifoldCAD.d.ts",
+    "lib/*.d.ts",
+    "lib/*.js",
     "types/manifoldCAD.d.ts",
-    "types/globalDefaults.d.ts",
+    "types/manifoldCADGlobals.d.ts",
     "dist/manifoldCAD.d.ts",
     "dist/manifoldCADGlobals.d.ts",
     "dist/worker.bundled.js"
@@ -72,7 +41,7 @@
     "./manifoldCAD.d.ts": "./dist/manifoldCAD.d.ts",
     "./lib/worker.bundled.js": {
       "import": "./dist/worker.bundled.js",
-      "types": "./lib/worker.js"
+      "types": "./lib/worker.d.ts"
     },
     "./lib/*": "./lib/*",
     "./manifold.wasm": "./manifold.wasm",
