--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         # FIXME: why doesn't scikit_build_core automatically download ninja?
         sudo apt-get update
-        sudo apt-get install ninja-build
+        sudo apt-get install ninja-build libtbb-dev
         pip wheel dist/*.tar.gz
     - uses: actions/upload-artifact@v4
       with:
