Stop using deprecated macos-13 images in CI (#1442)
* Stop using deprecated macos-13 images in CI

I made the smallest bump possible. Could also jump to macos-15-intel
at the appropriate places, but I figured you may be trying to keep
this running for (barely-)older OS versions.

* Use macos-15

--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -280,9 +280,9 @@ jobs:
       matrix:
         parallelization: [OFF, ON]
         shared: [OFF, ON]
-        # macos-13: intel
+        # macos-15-intel: intel
         # macos-latest: arm
-        os: [macos-13, macos-latest]
+        os: [macos-15-intel, macos-latest]
     runs-on: ${{matrix.os}}
     steps:
     - name: Install common dependencies
