--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -94,6 +94,7 @@
   },
   "homepage": "https://github.com/elalish/manifold#readme",
   "devDependencies": {
+    "@chialab/esbuild-plugin-meta-url": "^0.19.0",
     "@microsoft/api-extractor": "^7.53.3",
     "@types/convert-source-map": "^2.0.3",
     "@types/node": "^24.2.1",
@@ -110,12 +111,16 @@
     "@gltf-transform/core": "^4.2.0",
     "@gltf-transform/extensions": "^4.2.0",
     "@gltf-transform/functions": "^4.2.0",
+    "@jridgewell/resolve-uri": "^3.1.2",
     "@jridgewell/trace-mapping": "^0.3.31",
     "@jscadui/3mf-export": "^0.5.0",
     "commander": "^13.1.0",
     "convert-source-map": "^2.0.0",
     "esbuild-plugin-text-replace": "^1.3.0",
     "esbuild-wasm": "^0.25.11",
-    "fflate": "^0.8.0"
+    "fflate": "^0.8.0",
+    "install": "^0.13.0",
+    "magic-string": "^0.30.21",
+    "url-or-path": "^2.6.1"
   }
 }
