--- a/bindings/wasm/examples/package.json
+++ b/bindings/wasm/examples/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc --noEmit && vite build",
     "build:watch": "vite build --watch",
+    "clean": "rm -fr ./dist",
     "prebuild": "cd .. && npm run build",
     "preinstall": "cd .. && npm ci",
     "preview": "vite preview"
