--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -11,7 +11,7 @@
     "build": "tsc && node ./esbuild.mjs",
     "postbuild": "api-extractor run -c api-extractor-manifoldCAD.json && api-extractor run -c api-extractor-manifoldCADGlobals.json",
     "build:wasm": "mkdir -p ../../buildWASM && cd ../../buildWASM && emcmake cmake -DCMAKE_BUILD_TYPE=MinSizeRel .. && emmake make",
-    "clean": "tsc --build --clean && rm -fr ./dist/ ./coverage ./docs ./manifold.d.ts",
+    "clean": "tsc --build --clean && rm -fr ./dist/ ./coverage ./docs",
     "format": "cd ../.. && ./scripts/format.sh",
     "predocs": "npm run prebuild && npm run postbuild",
     "docs": "npx typedoc",
