--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -7,10 +7,13 @@
     "manifold-cad": "./bin/manifold-cad"
   },
   "scripts": {
-    "build": "tsc && node ./esbuild.mjs && npm run build:api-extractor",
-    "build:api-extractor": "api-extractor run -c api-extractor-manifoldCAD.json && api-extractor run -c api-extractor-manifoldCADGlobals.json",
-    "clean": "tsc --build --clean",
+    "prebuild": "api-extractor run -c api-extractor-manifold.json",
+    "build": "tsc && node ./esbuild.mjs",
+    "postbuild": "api-extractor run -c api-extractor-manifoldCAD.json && api-extractor run -c api-extractor-manifoldCADGlobals.json",
+    "build:wasm": "mkdir -p ../../buildWASM && cd ../../buildWASM && emcmake cmake -DCMAKE_BUILD_TYPE=MinSizeRel .. && emmake make",
+    "clean": "tsc --build --clean && rm -fr ./dist/ ./coverage ./docs",
     "format": "cd ../.. && ./scripts/format.sh",
+    "predocs": "npm run prebuild && npm run postbuild",
     "docs": "npx typedoc",
     "test": "vitest run",
     "test:ui": "vitest --coverage --ui",
@@ -51,6 +54,12 @@
       "import": {
         "types": "./dist/manifoldCAD.d.ts",
         "default": "./lib/manifoldCAD.js"
+      }
+    },
+    "./manifold-gltf": {
+      "import": {
+        "types": "./lib/manifold-gltf.d.ts",
+        "default": "./lib/manifold-gltf.d.ts"
       }
     },
     "./lib/worker.bundled.js": {
