Split user docs from api docs.

--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -13,8 +13,9 @@
     "build:wasm": "mkdir -p ../../buildWASM && cd ../../buildWASM && emcmake cmake -DCMAKE_BUILD_TYPE=MinSizeRel .. && emmake make",
     "clean": "tsc --build --clean && rm -fr ./dist/ ./coverage ./docs",
     "format": "cd ../.. && ./scripts/format.sh",
-    "predocs": "npm run prebuild && npm run postbuild",
-    "docs": "npx typedoc",
+    "docs": "npm run docs:jsapi && npm run docs:jsuser",
+    "docs:jsapi": "typedoc --options typedoc.api.json",
+    "docs:jsuser": "typedoc --options typedoc.user.json",
     "test": "vitest run",
     "test:ui": "vitest --coverage --ui",
     "test:dev": "vitest",
