--- a/bindings/wasm/examples/package.json
+++ b/bindings/wasm/examples/package.json
@@ -19,17 +19,17 @@
     "@gltf-transform/extensions": "^4.2.0",
     "@gltf-transform/functions": "^4.2.0",
     "@jscadui/3mf-export": "^0.5.0",
-    "@types/three": "^0.179.0",
-    "esbuild-wasm": "^0.25.11",
+    "@types/three": "^0.182.0",
+    "esbuild-wasm": "^0.27.2",
     "monaco-editor": "^0.54.0",
     "monaco-editor-auto-typings": "^0.4.6",
     "simple-dropzone": "0.8.3",
-    "three": "0.179.1"
+    "three": "0.182.0"
   },
   "devDependencies": {
-    "@types/node": "^24.2.1",
-    "typescript": "^5.9.2",
-    "vite": "^6.3.5",
-    "vite-plugin-static-copy": "^3.1.3"
+    "@types/node": "^25.0.9",
+    "typescript": "^5.9.3",
+    "vite": "7.3.1",
+    "vite-plugin-static-copy": "^3.1.5"
   }
 }
