--- a/bindings/wasm/tsconfig.json
+++ b/bindings/wasm/tsconfig.json
@@ -20,6 +20,7 @@
     "skipLibCheck": true,
     "allowImportingTsExtensions": true,
     "rewriteRelativeImportExtensions": true,
+    "verbatimModuleSyntax": true
   },
   "include": [
     "./lib/*.ts"
