Tests and creature comforts.

--- a/bindings/wasm/.gitignore
+++ b/bindings/wasm/.gitignore
@@ -6,6 +6,10 @@ lib/*.js
 lib/*.js.map
 lib/*.d.ts
 lib/*.d.ts.map
+test/*.js
+test/*.js.map
+test/*.d.ts
+test/*.d.ts.map
 dist/
 coverage/
 test/results
