Create a template for launching f3d from C++ (#1523)
* Create a template for launching f3d from C++

* Formatting

* Can only compile when MANIFOLD_EXPORT is set

* Add f3d download link

--- a/extras/CMakeLists.txt
+++ b/extras/CMakeLists.txt
@@ -57,4 +57,9 @@ if(MANIFOLD_EXPORT)
   target_link_libraries(convertFile manifold manifold)
   target_compile_options(convertFile PRIVATE ${MANIFOLD_FLAGS})
   exportbin(convertFile)
+
+  # Adding this just to confirm it builds; the executable doesn't do anything useful.
+  add_executable(f3dNoop f3d_skeleton.cpp)
+  target_link_libraries(f3dNoop manifold)
+  target_compile_options(f3dNoop PRIVATE ${MANIFOLD_FLAGS})
 endif()
