--- a/extras/CMakeLists.txt
+++ b/extras/CMakeLists.txt
@@ -21,15 +21,6 @@ target_link_libraries(perfTest manifold)
 target_compile_options(perfTest PRIVATE ${MANIFOLD_FLAGS})
 exportbin(perfTest)
 
-if(MANIFOLD_PAR AND MANIFOLD_EXPORT)
-  add_executable(man_bench ember_tests/man_bench.cpp)
-  target_link_libraries(man_bench PRIVATE manifold TBB::tbb)
-  target_compile_options(
-    man_bench
-    PRIVATE ${MANIFOLD_FLAGS} -DCONTROL_PARALLELISM
-  )
-endif()
-
 if(MANIFOLD_PAR AND NOT MSVC)
   add_executable(stlTest stl_test.cpp)
   target_link_libraries(stlTest PRIVATE manifold TBB::tbb)
@@ -52,14 +43,27 @@ if(MANIFOLD_DEBUG)
   exportbin(minimizeTestcase)
 endif()
 
-if(MANIFOLD_EXPORT)
+if(ASSIMP_ENABLE)
+  add_library(meshIO meshIO.cpp)
+  target_link_libraries(meshIO PUBLIC manifold assimp::assimp)
+  target_compile_options(meshIO PRIVATE ${MANIFOLD_FLAGS})
+
+  if(MANIFOLD_PAR)
+    add_executable(man_bench ember_tests/man_bench.cpp)
+    target_link_libraries(man_bench PRIVATE meshIO TBB::tbb)
+    target_compile_options(
+      man_bench
+      PRIVATE ${MANIFOLD_FLAGS} -DCONTROL_PARALLELISM
+    )
+  endif()
+
   add_executable(convertFile convert_file.cpp)
-  target_link_libraries(convertFile manifold manifold)
+  target_link_libraries(convertFile meshIO)
   target_compile_options(convertFile PRIVATE ${MANIFOLD_FLAGS})
   exportbin(convertFile)
 
   # Adding this just to confirm it builds; the executable doesn't do anything useful.
   add_executable(f3dNoop f3d_skeleton.cpp)
-  target_link_libraries(f3dNoop manifold)
+  target_link_libraries(f3dNoop meshIO)
   target_compile_options(f3dNoop PRIVATE ${MANIFOLD_FLAGS})
 endif()
