--- a/bindings/wasm/editor/package.json
+++ b/bindings/wasm/editor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manifold-examples",
+  "name": "manifold-editor",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,23 +8,16 @@
     "build": "tsc --noEmit && vite build",
     "build:watch": "vite build --watch",
     "clean": "rm -fr ./dist",
-    "prebuild": "cd .. && npm run build",
-    "preinstall": "cd .. && npm ci",
-    "preview": "vite preview",
-    "preview:docs": "cp -r ../../../docs ../../../samples ../docs dist && vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@gltf-transform/core": "^4.2.0",
     "@gltf-transform/extensions": "^4.2.0",
     "@gltf-transform/functions": "^4.2.0",
-    "@jscadui/3mf-export": "^0.5.0",
-    "@types/three": "^0.182.0",
     "esbuild-wasm": "^0.27.2",
     "monaco-editor": "^0.54.0",
-    "monaco-editor-auto-typings": "^0.4.6",
-    "simple-dropzone": "0.8.3",
-    "three": "0.182.0"
+    "monaco-editor-auto-typings": "^0.4.6"
   },
   "devDependencies": {
     "@types/node": "^25.0.9",
