Make each sub-package place nice with NPM.

--- a/bindings/wasm/examples/make-manifold/package.json
+++ b/bindings/wasm/examples/make-manifold/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@gltf-transform/core": "^4.2.0",
+    "@gltf-transform/extensions": "^4.2.0",
     "@gltf-transform/functions": "^4.2.0",
-    "@jscadui/3mf-export": "^0.5.0"
+    "@google/model-viewer": "^4.1.0",
+    "manifold-3d": "file:../..",
+    "simple-dropzone": "0.8.3"
   },
   "devDependencies": {
     "@types/node": "^25.0.9",
