--- a/bindings/wasm/editor/package.json
+++ b/bindings/wasm/editor/package.json
@@ -12,10 +12,9 @@
   },
   "dependencies": {
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "@gltf-transform/core": "^4.2.0",
-    "@gltf-transform/extensions": "^4.2.0",
-    "@gltf-transform/functions": "^4.2.0",
+    "@google/model-viewer": "^4.1.0",
     "esbuild-wasm": "^0.27.2",
+    "manifold-3d": "file:..",
     "monaco-editor": "^0.54.0",
     "monaco-editor-auto-typings": "^0.4.6"
   },
