--- a/bindings/wasm/examples/three/package.json
+++ b/bindings/wasm/examples/three/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/three": "^0.182.0",
-    "three": "0.182.0"
+    "three": "0.182.0",
+    "manifold-3d": "file:../.."
   },
   "devDependencies": {
     "@types/node": "^25.0.9",
+    "@types/three": "^0.182.0",
     "typescript": "^5.9.3",
     "vite": "7.3.1"
   }
