--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -10,11 +10,19 @@
     "prebuild": "api-extractor run -c api-extractor-manifold.json",
     "build": "tsc && node ./esbuild.mjs",
     "build:wasm": "mkdir -p ../../buildWASM && cd ../../buildWASM && emcmake cmake -DCMAKE_BUILD_TYPE=MinSizeRel .. && emmake make",
+    "build:editor": "cd editor && npm run build",
+    "build:examples": "(cd examples/three && npm run build) && (cd examples/model-viewer && npm run build) && (cd examples/make-manifold && npm run build)",
+    "ci:editor": "cd editor && npm ci",
+    "ci:examples": "(cd examples/three && npm ci) && (cd examples/model-viewer && npm ci) && (cd examples/make-manifold && npm ci)",
     "postbuild": "api-extractor run -c api-extractor-manifoldCAD.json && api-extractor run -c api-extractor-manifoldCADGlobals.json",
     "docs": "npm run docs:jsapi && npm run docs:jsuser",
     "docs:jsapi": "typedoc --options typedoc.api.json",
     "docs:jsuser": "typedoc --options typedoc.user.json",
     "docs:cppapi": "cd ../.. && doxygen",
+    "public": "mkdir -p ./public && npm run public:docs && npm run public:editor && npm run public:examples",
+    "public:docs": "cp -rv docs public/",
+    "public:editor": "cd editor && npm run public",
+    "public:examples": "(cd examples/three && npm run public) && (cd examples/model-viewer && npm run public) && (cd examples/make-manifold && npm run public)",
     "test": "vitest run",
     "test:ui": "vitest --coverage --ui",
     "test:dev": "vitest",
