--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -122,7 +122,8 @@
   "peerDependencies": {
     "@gltf-transform/core": "^4.2.0",
     "@gltf-transform/extensions": "^4.2.0",
-    "@gltf-transform/functions": "^4.2.0"
+    "@gltf-transform/functions": "^4.2.0",
+    "esbuild-wasm": "0.27.2"
   },
   "devDependencies": {
     "@chialab/esbuild-plugin-meta-url": "^0.19.0",
@@ -131,7 +132,6 @@
     "@types/node": "^25.0.9",
     "@vitest/coverage-v8": "^4.0.17",
     "@vitest/ui": "^4.0.17",
-    "esbuild": "^0.27.2",
     "glob": "^13.0.0",
     "stacktrace-parser": "^0.1.11",
     "typedoc": "^0.28.16",
@@ -147,10 +147,7 @@
     "@jscadui/3mf-export": "^0.5.0",
     "commander": "^13.1.0",
     "convert-source-map": "^2.0.0",
-    "esbuild-plugin-text-replace": "^1.3.0",
-    "esbuild-wasm": "^0.27.2",
     "fflate": "^0.8.0",
-    "magic-string": "^0.30.21",
-    "url-or-path": "^2.6.1"
+    "magic-string": "^0.30.21"
   }
 }
