Separate Editor and Examples for clarity. (#1536)
* Separate examples and editor.

* Make each sub-package place nice with NPM.

* It has been [0] days since the last linter error.

* Make CI work with separate examples.

* More tests, more tweaks.

* Move editor back under examples.

* It has been [0] days since the last linter error.

* Update lockfiles.

--- a/bindings/wasm/.gitignore
+++ b/bindings/wasm/.gitignore
@@ -1,15 +1,16 @@
-manifold.js
-manifold.wasm
-manifold-3d-*.tgz
-manifold.d.ts
-lib/*.js
-lib/*.js.map
-lib/*.d.ts
-lib/*.d.ts.map
-test/*.js
-test/*.js.map
-test/*.d.ts
-test/*.d.ts.map
-dist/
-coverage/
-test/results
+/manifold.js
+/manifold.wasm
+/manifold-3d-*.tgz
+/manifold.d.ts
+/lib/*.js
+/lib/*.js.map
+/lib/*.d.ts
+/lib/*.d.ts.map
+/test/*.js
+/test/*.js.map
+/test/*.d.ts
+/test/*.d.ts.map
+/test/results
+/coverage
+/public
+dist
