--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -10,11 +10,24 @@
     "prebuild": "api-extractor run -c api-extractor-manifold.json",
     "build": "tsc && node ./esbuild.mjs",
     "build:wasm": "mkdir -p ../../buildWASM && cd ../../buildWASM && emcmake cmake -DCMAKE_BUILD_TYPE=MinSizeRel .. && emmake make",
+    "build:all": "npm run build && npm run build:editor && npm run build:examples",
+    "build:editor": "cd examples/editor && npm run build",
+    "build:examples": "(cd examples/three && npm run build) && (cd examples/model-viewer && npm run build) && (cd examples/make-manifold && npm run build)",
+    "ci:all": "npm ci && npm run ci:editor && npm run ci:examples",
+    "ci:editor": "cd examples/editor && npm ci",
+    "ci:examples": "(cd examples/three && npm ci) && (cd examples/model-viewer && npm ci) && (cd examples/make-manifold && npm ci)",
+    "install:all": "npm install && npm run install:editor && npm run install:examples",
+    "install:editor": "cd examples/editor && npm install",
+    "install:examples": "(cd examples/three && npm install) && (cd examples/model-viewer && npm install) && (cd examples/make-manifold && npm install)",
     "postbuild": "api-extractor run -c api-extractor-manifoldCAD.json && api-extractor run -c api-extractor-manifoldCADGlobals.json",
     "docs": "npm run docs:jsapi && npm run docs:jsuser",
     "docs:jsapi": "typedoc --options typedoc.api.json",
     "docs:jsuser": "typedoc --options typedoc.user.json",
     "docs:cppapi": "cd ../.. && doxygen",
+    "public": "mkdir -p ./public && npm run public:docs && npm run public:editor && npm run public:examples",
+    "public:docs": "cp -rv docs public/",
+    "public:editor": "cd examples/editor && npm run public",
+    "public:examples": "(cd examples/three && npm run public) && (cd examples/model-viewer && npm run public) && (cd examples/make-manifold && npm run public)",
     "test": "vitest run",
     "test:ui": "vitest --coverage --ui",
     "test:dev": "vitest",
@@ -61,7 +74,7 @@
     "./manifold-gltf": {
       "import": {
         "types": "./lib/manifold-gltf.d.ts",
-        "default": "./lib/manifold-gltf.d.ts"
+        "default": "./lib/manifold-gltf.js"
       }
     },
     "./lib/worker.bundled.js": {
@@ -76,7 +89,14 @@
         "default": "./manifold.js"
       }
     },
-    "./lib/*": "./lib/*"
+    "./lib/*.js": "./lib/*.js",
+    "./lib/*.d.ts": "./lib/*.d.ts",
+    "./lib/*": {
+      "import": {
+        "types": "./lib/*.d.ts",
+        "default": "./lib/*.js"
+      }
+    }
   },
   "typings": "manifold.d.ts",
   "types": "manifold.d.ts",
@@ -104,6 +124,12 @@
     "url": "https://github.com/elalish/manifold/issues"
   },
   "homepage": "https://github.com/elalish/manifold#readme",
+  "peerDependencies": {
+    "@gltf-transform/core": "^4.2.0",
+    "@gltf-transform/extensions": "^4.2.0",
+    "@gltf-transform/functions": "^4.2.0",
+    "esbuild-wasm": "^0.27.3"
+  },
   "devDependencies": {
     "@chialab/esbuild-plugin-meta-url": "^0.19.0",
     "@microsoft/api-extractor": "^7.55.2",
@@ -111,7 +137,6 @@
     "@types/node": "^25.0.9",
     "@vitest/coverage-v8": "^4.0.17",
     "@vitest/ui": "^4.0.17",
-    "esbuild": "^0.27.2",
     "glob": "^13.0.0",
     "stacktrace-parser": "^0.1.11",
     "typedoc": "^0.28.16",
@@ -127,10 +152,8 @@
     "@jscadui/3mf-export": "^0.5.0",
     "commander": "^13.1.0",
     "convert-source-map": "^2.0.0",
-    "esbuild-plugin-text-replace": "^1.3.0",
-    "esbuild-wasm": "^0.27.2",
     "fflate": "^0.8.0",
-    "magic-string": "^0.30.21",
-    "url-or-path": "^2.6.1"
+    "magic-string": "^0.30.21"
+
   }
 }
