Fix failing npm publish.
I got clever with the site build, and didn't look at the `publish_npm`
pipeline.  This fixes it by uploading two copies of the build.
`wasmpublic` contains the editor, examples, and documentation ready for
deployment to github pages.  `wasm` contains the entire `bindings/wasm`
tree, ready for publication to npm.

Fixes #1548.

--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -179,8 +179,16 @@ jobs:
       uses: actions/upload-artifact@v4
       if: github.event_name == 'push' && matrix.parallelization == 'OFF' && matrix.debug == 'OFF'
       with:
-        name: wasm
+        name: wasmpublic
         path: bindings/wasm/public/
+        retention-days: 90
+        overwrite: true
+    - name: Upload complete wasm build.
+      uses: actions/upload-artifact@v4
+      if: github.event_name == 'push' && matrix.parallelization == 'OFF' && matrix.debug == 'OFF'
+      with:
+        name: wasm
+        path: bindings/wasm/
         retention-days: 90
         overwrite: true
 
