--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
         run_id: ${{github.event.workflow_run.id}}
         # do not download from old run
         check_artifacts: true 
-        name: wasm
+        name: wasmpublic
         path: ./public
 
     - name: Deploy to Github Pages
